--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,4 +2,8 @@
 
 {% block content %}
 <h2>トップページ</h2>
+
+{% for photo in photos %}
+    <img src="{{ photo.image.url }}" class="photo-image" alt="">
+{% endfor %}
 {% endblock %}
