--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -2,14 +2,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>写真投稿サイト</title>
+  <title>base</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1><a href="{% url 'app:index' %}">写真投稿サイト</a></h1>
-      <div class="header-menu"> <a href="">投稿</a> </div>
+    <h1><a href="{% url 'app:index' %}">base</a></h1>
+      <div class="header-menu">
+        <a href="">投稿</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'app:users_detail' request.user.id %}">mypage</a>
+            <a href="{% url 'app:logout' %}">logout</a>
+        {% else %}
+            <a href="{% url 'app:login' %}">login</a>
+        {% endif %}
+      </div>
     </div>
   </header>
   <div class="container"> {% block content %}{% endblock %} </div>
