--- a/app/templates/app/users_detail.html
+++ b/app/templates/app/users_detail.html
@@ -1,9 +1,7 @@
 {% extends 'app/base.html' %}
 {% block content %}
 <h2 class="user-name">@{{ user.username }}</h2>
-{% if user.is_superuser %}
-    <p>管理者</p>
-{% else %}
-    <p>一般ユーザー</p>
-{% endif %}
+{% for photo in photos %}
+    <img src="{{ photo.image.url }}" class="photo-image" alt="">
+{% endfor %}
 {% endblock %}
